[gd_scene load_steps=13 format=3 uid="uid://b2qdyqi73m1nh"]

[ext_resource type="Script" path="res://scenes/menus/title_screen.gd" id="1_8u8ci"]
[ext_resource type="Texture2D" uid="uid://ci27q2k5qw6ig" path="res://sprites/Menus/Title Screen - Logo.png" id="1_urgqw"]
[ext_resource type="AudioStream" uid="uid://d2lwuxi6u0n5i" path="res://music/Title Screen.mp3" id="2_1m5r0"]
[ext_resource type="Texture2D" uid="uid://dccdjhol4rvhw" path="res://sprites/Menus/Title Screen - Subtitle.png" id="2_11mew"]
[ext_resource type="Texture2D" uid="uid://iqatecmiuy6e" path="res://sprites/Menus/Title Screen - Bass.png" id="3_u5ruh"]
[ext_resource type="Theme" uid="uid://c1bun7kn776g1" path="res://themes/ui_theme.tres" id="5_v27ry"]
[ext_resource type="Texture2D" uid="uid://blgb1vsp248uk" path="res://sprites/HUD/Life Icons.png" id="6_rvesi"]
[ext_resource type="Script" path="res://scenes/menus/volumeslider.gd" id="8_8ahmy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l4n2s"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_hflye"]
atlas = ExtResource("6_rvesi")
region = Rect2(0, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a52vu"]
atlas = ExtResource("6_rvesi")
region = Rect2(24, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7tyd"]
atlas = ExtResource("6_rvesi")
region = Rect2(48, 0, 24, 16)

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_8u8ci")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1m5r0")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 384.0
offset_bottom = 216.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Bass" type="TextureRect" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_u5ruh")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_urgqw")
stretch_mode = 4

[node name="Subtitle" type="TextureRect" parent="CenterContainer/HBoxContainer/VBoxContainer/Logo"]
layout_mode = 0
offset_left = 22.0
offset_top = 28.0
offset_right = 172.0
offset_bottom = 36.0
texture = ExtResource("2_11mew")
stretch_mode = 4

[node name="ItemList" type="ItemList" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_l4n2s")
allow_search = false
auto_height = true
item_count = 3
item_0/text = "MAESTRO"
item_0/icon = SubResource("AtlasTexture_hflye")
item_1/text = "BASS (!)"
item_1/icon = SubResource("AtlasTexture_a52vu")
item_1/selectable = false
item_1/disabled = true
item_2/text = "COPY ROBOT (!)"
item_2/icon = SubResource("AtlasTexture_t7tyd")

[node name="StartButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_v27ry")
text = "PRESS START"
flat = true

[node name="HSlider" type="HSlider" parent="."]
offset_left = 8.0
offset_right = 178.0
offset_bottom = 16.0
max_value = 1.0
step = 0.01
tick_count = 10
script = ExtResource("8_8ahmy")
bus_name = "Music"

[node name="HSlider2" type="HSlider" parent="."]
offset_left = 208.0
offset_right = 378.0
offset_bottom = 16.0
max_value = 1.0
step = 0.01
tick_count = 10
script = ExtResource("8_8ahmy")
bus_name = "SFX"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 32.0
offset_top = 24.0
offset_right = 128.0
offset_bottom = 32.0
text = "Music Volume"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 232.0
offset_top = 24.0
offset_right = 328.0
offset_bottom = 32.0
text = "SFX Volume"

[node name="MenuButton" type="MenuButton" parent="."]
visible = false
offset_left = 8.0
offset_top = 32.0
offset_right = 72.0
offset_bottom = 48.0
text = "Palette"
item_count = 2
popup/item_0/text = "Genesis / Mega Drive"
popup/item_1/text = "Pico-8"
popup/item_1/id = 1

[connection signal="item_selected" from="CenterContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_startbutton_pressed"]
